--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stortcut icon" href="./favicon.ico">
 </head>
 <body>
-    сьрпмло
+    <header class="header">
+        <div class="container">
+<nav class="nav">
+    <a href="./index.html" class="nav_logo">
+        <img class="nav_img" src="./images/Cyberpunk_2077_logo 1.svg" alt="logot">
+    </a>
+    <div class="nav_icons">
+        <a class="nav_icon" href="#"><img src="./images/youtube logo.svg" alt="youtube"></a>
+        <a class="nav_icon" href="#"><img src="./images/vk logo.svg" alt="vk"></a>
+        <a class="nav_icon" href="#"><img src="./images/facebook-rect logo.svg" alt="face"></a>
+        <a class="nav_icon" href="#"><img src="./images/twitter-square logo.svg" alt="twit"></a>
+        <a class="nav_icon" href="#"><img src="./images/twitch logo.svg" alt="twich"></a>
+        <a class="nav_icon" href="#"><img src="./images/instagram-square logo.svg" alt="inst"></a>
+    </div>
+
+</nav>
+</div>
+         <div class="square">
+            <h1 class="square_title">Доступно на всех платформах</h1>
+            <button class="square_btn">Узнать больше</button>
+         </div>  
+    </header>
 </body>
 </html>
