add response desing header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="header">
         <div class="container">
 <nav class="nav">
-    <a href="./index.html" class="nav_logo">
-        <img class="nav_img" src="./images/Cyberpunk_2077_logo 1.svg" alt="logot">
+    <a href="./index.html" class="nav__logo">
+        <img class="nav__img" src="./images/Cyberpunk_2077_logo 1.svg" alt="logot">
     </a>
     <div class="nav_icons">
         <a class="nav_icon" href="#"><img src="./images/youtube logo.svg" alt="youtube"></a>
@@ -28,7 +28,7 @@
          <div class="square">
             <h1 class="square_title">Доступно на всех платформах</h1>
             <button class="square_btn">Узнать больше</button>
-         </div>  
+         </div>
     </header>
 </body>
 </html>
