--- a/index.html
+++ b/index.html
@@ -30,5 +30,22 @@
             <button class="square_btn">Узнать больше</button>
          </div>
     </header>
+<main>
+             <div class="container">
+                <section class="about">
+                    <h3 class="about__tittle"> Найт-Сити изменит тебя навсегда!</h3>
+                    <p class="about__desc"><span class="blue">
+                        cyberpunk 2077
+                    </span>
+                    — приключенческая ролевая игра, действие которой происходит в мегаполисе Найт-Сити, где власть, роскошь и модификации тела ценятся выше всего. Ты играешь за V, наёмника в поисках устройства, позволяющего обрести бессмертие. Ты сможешь менять киберимпланты, навыки и стиль игры своего персонажа, исследуя открытый мир, где твои поступки влияют на ход сюжета и всё, что тебя окружает.</p>
+                </section>      
+             </div>
+            <div class="images">
+                <img src="./images/1111mal.png" alt="fototut">
+                <img src="./images/22mal.png" alt="fototut">
+                <img src="./images/33mal.png" alt="fototut">
+            </div>
+</main>
+
 </body>
 </html>
