--- a/index.html
+++ b/index.html
@@ -45,7 +45,34 @@
                 <img src="./images/22mal.png" alt="fototut">
                 <img src="./images/33mal.png" alt="fototut">
             </div>
-</main>
+
+            <section class="form">
+                 <div class="container">
+                    <div class="form-images">
+                        <div class="form-images-one"></div>
+                        <div class="form-images-two"></div>
+                    </div>
+                    <div class="form-descript">
+                        <h3 class="form__tittle">Играй и выигрывай</h3>
+                        <p class="form__deck">Играй в <span class="blue"> Cyberpunk 2077</span> и получи возможность выиграть консоль <span class="blue"> Xbox Series X</span> или  <span class="blue"> Sony PlayStation 5</span> ! Заполни форму ниже и приложи скриншот о покупке игры. Итоги розыгрыша будут подведены <span class="blue"> 1 февраля</span>. Удачи! ;)</p>
+                      <form class="from-fields">
+                          <label for="text"></label>
+                           <input class="input" name="text" id="text" type="text" placeholder="как тебя зовут мой дорогой" required>
+
+                           <label for="email"></label>
+                           <input class="input" name="email" id="email" type="email" placeholder="твой email нужно по братский" required>
+                           
+                           <label class="download" for="download"> прикрепить скриншот</label>
+                           <input class="input-dowload" id="download" type="file">
+
+                            <button class="form__btn">отправить</button>
+                            <label for="checkbox">согласен на обработку персональных данных</label>
+                            <input id="checkbox" type="checkbox">
+                      </form>
+                    </div>
+                 </div>
+            </section>
+</main> 
 
 </body>
 </html>
