create section form-movile

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-descript">
                         <h3 class="form__tittle">Играй и выигрывай</h3>
-                        <p class="form__deck">Играй в <span class="blue"> Cyberpunk 2077</span> и получи возможность выиграть консоль <span class="blue"> Xbox Series X</span> или  <span class="blue"> Sony PlayStation 5</span> ! Заполни форму ниже и приложи скриншот о покупке игры. Итоги розыгрыша будут подведены <span class="blue"> 1 февраля</span>. Удачи! ;)</p>
+                        <p class="form__deck">Играй в <span class="blue"> Cyberpunk 2077</span> и получи возможность выиграть консоль <span class="blue"> Xbox Series X</span> или  <span class="blue"> Sony PlayStation 5</span> ! Заполни форму ниже и приложи скриншот о покупке игры<span class="blue">.</span> Итоги розыгрыша будут подведены <span class="blue"> 1 февраля</span>. Удачи! ;)</p>
                       <form class="from-fields">
                           <label for="text"></label>
                            <input class="input" name="text" id="text" type="text" placeholder="как тебя зовут мой дорогой" required>
@@ -66,8 +66,8 @@
                            <input class="input-dowload" id="download" type="file">
 
                             <button class="form__btn">отправить</button>
-                            <label for="checkbox">согласен на обработку персональных данных</label>
-                            <input id="checkbox" type="checkbox">
+                            <input class="input-checkbox" id="checkbox" type="checkbox">
+                            <label class="checkbox" for="checkbox">согласен на обработку персональных данных</label>
                       </form>
                     </div>
                  </div>
