create section form-movile

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
 
             <section class="form">
+                <img class="aksia" src="./images/aksia.svg" alt="">
                  <div class="container">
                     <div class="form-images">
                         <div class="form-images-one"></div>
