create response design

--- a/index.html
+++ b/index.html
@@ -1,79 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cyberpunk</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stortcut icon" href="./favicon.ico">
-</head>
-<body>
-    <header class="header">
-        <div class="container">
-<nav class="nav">
-    <a href="./index.html" class="nav__logo">
-        <img class="nav__img" src="./images/Cyberpunk_2077_logo 1.svg" alt="logot">
-    </a>
-    <div class="nav_icons">
-        <a class="nav_icon" href="#"><img src="./images/youtube logo.svg" alt="youtube"></a>
-        <a class="nav_icon" href="#"><img src="./images/vk logo.svg" alt="vk"></a>
-        <a class="nav_icon" href="#"><img src="./images/facebook-rect logo.svg" alt="face"></a>
-        <a class="nav_icon" href="#"><img src="./images/twitter-square logo.svg" alt="twit"></a>
-        <a class="nav_icon" href="#"><img src="./images/twitch logo.svg" alt="twich"></a>
-        <a class="nav_icon" href="#"><img src="./images/instagram-square logo.svg" alt="inst"></a>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>cyberPunk</title>
+        <link rel="stylesheet" href="./style.css">
+        <link rel=" shortcut icon" href="./favicon.ico">
+    </head>
+    <body>
+        <header class="header">
+            <div class="container">
+                <nav class="nav">
+                    <a href="./index.html" class="nav__logo">
+                        <img class="nav__img" src="./images/logo.svg"
+                            alt=".logotype">
+                    </a>
+                    <div class="nav__icons">
+                        <a class="nav__icon" href="#"><img
+                                src="./images/youTube.svg" alt=".youtube"></a>
+                        <a class="nav__icon" href="#"><img src="./images/vk.svg"
+                                alt=".vk"></a>
+                        <a class="nav__icon" href="#"><img
+                                src="./images/facebook.svg" alt=".facebook"></a>
+                        <a class="nav__icon" href="#"><img src="./images/x.svg"
+                                alt=".x"></a>
+                        <a class="nav__icon" href="#"><img
+                                src="./images/twitch.svg" alt=".twitch"></a>
+                        <a class="nav__icon" href="#"><img
+                                src="./images/instagramm.svg"
+                                alt=".instagramm"></a>
+                    </div>
+                </nav>
+            </div>
 
-</nav>
-</div>
-         <div class="square">
-            <h1 class="square_title">Доступно на всех платформах</h1>
-            <button class="square_btn">Узнать больше</button>
-         </div>
-    </header>
-<main>
-             <div class="container">
+            <div class="square">
+                <h1 class="square__title">Доступно на всех платформах</h1>
+                <button class="square__btn">Узнать больше</button>
+            </div>
+
+        </header>
+        <main>
+            <div class="container">
                 <section class="about">
-                    <h3 class="about__tittle"> Найт-Сити изменит тебя навсегда!</h3>
-                    <p class="about__desc"><span class="blue">
-                        cyberpunk 2077
-                    </span>
-                    — приключенческая ролевая игра, действие которой происходит в мегаполисе Найт-Сити, где власть, роскошь и модификации тела ценятся выше всего. Ты играешь за V, наёмника в поисках устройства, позволяющего обрести бессмертие. Ты сможешь менять киберимпланты, навыки и стиль игры своего персонажа, исследуя открытый мир, где твои поступки влияют на ход сюжета и всё, что тебя окружает.</p>
-                </section>      
-             </div>
+                    <h3 class="about__title">Найт-Сити изменит тебя
+                        навсегда!</h3>
+                    <p class="about__desc"><span class="blue">Cyberpunk
+                            2077</span>
+                        — приключенческая
+                        ролевая игра, действие которой происходит в мегаполисе
+                        Найт-Сити, где власть, роскошь и модификации тела
+                        ценятся выше всего. Ты играешь за V, наёмника в поисках
+                        устройства, позволяющего обрести бессмертие. Ты сможешь
+                        менять киберимпланты, навыки и стиль игры своего
+                        персонажа, исследуя открытый мир, где твои поступки
+                        влияют на ход сюжета и всё, что тебя окружает.
+                    </p>
+                </section>
+            </div>
             <div class="images">
-                <img src="./images/1111mal.png" alt="fototut">
-                <img src="./images/22mal.png" alt="fototut">
-                <img src="./images/33mal.png" alt="fototut">
+
+                <picture class="img1">
+
+                    <source media="(min-width: 500px)"
+                        srcset="./images/about-tablet-1.png">
+
+                    <source media="(min-width: 320px)"
+                        srcset="./images/about-mobile-1.png">
+
+                    <img src="./images/about-mobile-1.png" alt=".pictures">
+
+                </picture>
+
+                <picture class="img2">
+                    <source media="(min-width: 500px)"
+                        srcset="./images/about-tablet-2.png">
+                    <source media="(min-width: 320px)"
+                        srcset="./images/about-mobile-2.png">
+                    <img src="./images/about-mobile-2.png" alt=".pictures">
+                </picture>
+
+                <picture class="img3">
+                    <source media="(min-width: 768px)"
+                        srcset="./images/about-desctop-3.png">
+                    <source media="(min-width: 500px)"
+                        srcset="./images/about-tablet-3.png">
+                    <source media="(min-width: 320px)"
+                        srcset="./images/about-mobile-3.png">
+                    <img src="./images/about-mobile-3.png" alt=".pictures">
+                </picture>
+
             </div>
 
             <section class="form">
-                <img class="aksia" src="./images/aksia.svg" alt="">
-                 <div class="container">
-                    <div class="form-images">
-                        <div class="form-images-one"></div>
-                        <div class="form-images-two"></div>
-                    </div>
-                    <div class="form-descript">
-                        <h3 class="form__tittle">Играй и выигрывай</h3>
-                        <p class="form__deck">Играй в <span class="blue"> Cyberpunk 2077</span> и получи возможность выиграть консоль <span class="blue"> Xbox Series X</span> или  <span class="blue"> Sony PlayStation 5</span> ! Заполни форму ниже и приложи скриншот о покупке игры<span class="blue">.</span> Итоги розыгрыша будут подведены <span class="blue"> 1 февраля</span>. Удачи! ;)</p>
-                      <form class="from-fields">
-                          <label for="text"></label>
-                           <input class="input" name="text" id="text" type="text" placeholder="как тебя зовут мой дорогой" required>
 
-                           <label for="email"></label>
-                           <input class="input" name="email" id="email" type="email" placeholder="твой email нужно по братский" required>
-                           
-                           <label class="download" for="download"> прикрепить скриншот</label>
-                           <input class="input-dowload" id="download" type="file">
+                <div class="container">
+                    <div class="wrapper">
 
-                            <button class="form__btn">отправить</button>
-                            <input class="input-checkbox" id="checkbox" type="checkbox">
-                            <label class="checkbox" for="checkbox">согласен на обработку персональных данных</label>
-                      </form>
+                        <div class="element"></div>
+
+                        <div class="form-images">
+                            <div class="form-images-one"></div>
+                            <div class="form-images-two"></div>
+                        </div>
+                        <div class="form-description">
+                            <h3 class="form__title">Играй и выигрывай!</h3>
+                            <p class="form__desc">Играй в <span
+                                    class="blue">Cyberpunk 2077</span> и получи
+                                возможность выиграть консоль <span
+                                    class="blue">Xbox
+                                    Series X</span> или <span class="blue">Sony
+                                    PlayStation 5!</span> Заполни форму ниже и
+                                приложи скриншот
+                                о покупке игры. Итоги розыгрыша будут подведены
+                                1
+                                февраля. Удачи! ;)
+                            </p>
+                            <form class="form-fields">
+                                <label for="text"></label>
+                                <input class="input" name="text" id="text"
+                                    type="text"
+                                    placeholder="Как тебя зовут?" required>
+
+                                <label for="email"></label>
+                                <input class="input" name="email" id="email"
+                                    type="email"
+                                    placeholder="Твой е-mail" required>
+
+                                <label class="download"
+                                    for="download">прикрепить
+                                    скриншот</label>
+                                <input class="input-download" id="download"
+                                    type="file">
+
+                                <button class="form__btn">Отправить</button>
+
+                                <input class="input-checkbox" id="checkbox"
+                                    type="checkbox">
+
+                                <label class="checkbox" for="checkbox">
+                                    Согласен на обработку персональных данных
+                                </label>
+
+                            </form>
+                        </div>
                     </div>
-                 </div>
+                </div>
             </section>
-</main> 
-
-</body>
+        </main>
+    </body>
 </html>
