--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 приложи скриншот
                                 о покупке игры. Итоги розыгрыша будут подведены
                                 1
-                                февраля. Удачи! ;)
+                                февраля. Удачи! ;
                             </p>
                             <form class="form-fields">
                                 <label for="text"></label>
@@ -147,5 +147,77 @@
                 </div>
             </section>
         </main>
+
+          <section class="deep">
+              <div class="dispay">
+                <picture>
+                    <source media="(min-width:1024px)"
+                    srcset="./images/dispay-desctop.png">
+
+                    <source media="(min-width:780px)"
+                    srcset="./images/dispay-tablet.png">
+
+                    <source media="(min-width:320px)"
+                    srcset="./images/dispay-mobile.png">
+                                            
+                </picture>
+            </div>
+                 <div class="dispay__icons">
+                 <img src="./images/z.png" alt="">
+                  <div class="dispay__icons">
+                    <img src="./images/hp.svg" alt="">
+                    <img src="./images/krest.svg" alt="">
+                    <img src="./images/logo.svg" alt="">
+                  </div>
+                </div>
+                  <div class="display__wrapper">
+                    <h3 class="dispay__title">Полное погружение вместе с HP</h3>
+                    <p class="dispay__deck">Погрузись в современные экшен-игры с реалистичным изображением с помощью монитора с диагональю 23,8 дюйма, созданном для отображения максимально насыщенных цветов. Успевай реагировать на любые события с временем отклика 1 мс и частотой в 144 Гц!</p>
+                  <div class="deep__about">
+                    <div class="deep__about-deck corol">Яркие насыщенные цвета</div>
+                    <div class="deep__about-deck pics ">Кристальная четкость изображения</div>
+                    <div class="deep__about-deck fps"> Быстрые движения и плавный геймплей</div>
+                  </div>
+                  <button class="deep__btn">Подробно тут ёмаё просто нажми</button>
+                </div>
+
+              </div>
+
+          </section>
+
+               <section class="store">
+                <img class="diskstore" src="./images/store.png" alt="">
+                 <h4 class="store__about">Купить игру Cyberpunk 2077</h4>   
+                 <p class="siniy">В комплект входит:</p>
+                  <div class="komplekt">
+                    <p>Футляр с игровыми дисками</p>
+                     <br>
+
+                    <p>Футляр с кодом для загрузки игры и дисками (pc)</p>
+                     <br>
+                    <p>Справочник с информацией об игровом мире</p>
+                  </div>
+                        <h5 class="siniy">Выберите платформу:</h5>
+            </section>
+
+             <section class="dispay-gtid">
+                <img class="ico" src="./images/PC.svg" alt="">
+                <img class="ico" src="./images/xbox-one-3 logo.svg" alt="">
+                 <br>
+                 <img class="icoo" src="./images/ыы.svg" alt="">
+                 <img class="icoo" src="./images/pl4.svg" alt="">
+             </section>
+             
+             <section class="license">
+                <img class="logo" src="./images/logo.svg" alt="">
+                <img class="logo" src="./images/CD_Projekt_logo 1.svg" alt="">
+                <div class="end">
+                    <p class="eend">Лицензия</p>
+                    <p class="ennd">Политика конфиденциальности  </p>
+                </div>
+                <div class="the__end">
+                    <h6 class="tj">CD PROJEKT®, Cyberpunk®, Cyberpunk 2077®</h6>
+                </div>
+              </section>
     </body>
 </html>
